# RetroAchievement-Rich-Presence

./: .env.example  Cargo.toml  README.md  config.toml
src/: config.rs  discord.rs  errors.rs  main.rs  ra_api.rs  state.rs
src/config/: config.rs  mod.rs  paths.rs  setup.rs
