[package]
name = "ra-discord-rp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
confy = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
presenceforge = { version = "0.2", features = ["tokio-runtime"] }
dialoguer = "0.11"
directories = "5"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true